[package]
name = "guest_distance_calculator"
version = "0.1.0"
edition = "2021"
authors = ["marekls <stocki.marekk@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7" }
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

